fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,7 @@ h1 {
     height: 10px;
     width: 10x;
     padding-left: 3px;
+    padding-top: 2px;
 }
 
 @media (max-width: 768px) {
